[gd_scene load_steps=9 format=3 uid="uid://c4t6g667i5fpw"]

[ext_resource type="Script" uid="uid://dvb5pbe2mkowo" path="res://scenes/item/ItemMiniGame.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b0quamc8je8n4" path="res://assets/Images/Collectibles/garrafa.png" id="2"]
[ext_resource type="AudioStream" uid="uid://chv1gewpae2m2" path="res://assets/Sounds/ui/ui_select.mp3" id="3"]
[ext_resource type="Texture2D" uid="uid://blnn863k3wtwy" path="res://assets/Images/Effects/light.png" id="4"]

[sub_resource type="CircleShape2D" id="1"]
radius = 19.9453

[sub_resource type="Shader" id="3"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float outLineSize  = 0.02;
uniform vec4  outLineColor : source_color;

void fragment()
{
    vec4 tcol = texture(TEXTURE, UV);
    
    if (tcol.a == 0.0)
    {
        if (texture(TEXTURE, UV + vec2(0.0,          outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(0.0,         -outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  0.0)).a          != 0.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, 0.0)).a          != 0.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, -outLineSize)).a != 0.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  -outLineSize)).a != 0.0) 
            tcol = outLineColor;
    }
    
    COLOR = tcol;
}"

[sub_resource type="ShaderMaterial" id="4"]
shader = SubResource("3")
shader_parameter/outLineSize = 0.02
shader_parameter/outLineColor = Color(0.819608, 0.819608, 0.819608, 1)

[sub_resource type="Animation" id="2"]
resource_name = "default"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light3D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 360.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Light3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6, 3.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.403922, 0.941176, 0.384314, 1), Color(0.941176, 0.917647, 0.384314, 1), Color(1, 1, 1, 1)]
}

[node name="Item" type="Area2D"]
z_index = 25
monitoring = false
collision_layer = 16
script = ExtResource("1")
itemName = "garrafa"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Light3D" type="Sprite2D" parent="."]
texture = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("4")
texture = ExtResource("2")

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource("2")

[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=6]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
